# new-repo

./: OIDC.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: frogbot.yml  jfrog-github-oidc-example.yml  test-workflow.yml
